.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Recruitment_Agency__c.object
<CustomObject>
    <description>Recruitment
Agency details</description>
    <fields>
        <fullName>xcdhcm__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Agency_email__c</fullName>
        <formula>xcdhcm__Salesforce_user_account__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the email address which will be used for all automated email (such as notification of new vacancies)</inlineHelpText>
        <label>Agency email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Agency_rate__c</fullName>
        <label>Agency rate (%)</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_email_address__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contractual_relationship__c</fullName>
        <label>Contractual relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contractual_terms__c</fullName>
        <label>Contract terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_agency_agreement_signed__c</fullName>
        <label>Date agency agreement signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Loogin_username__c</fullName>
        <formula>xcdhcm__Salesforce_user_account__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency login username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_vacancies_assigned__c</fullName>
        <label>Number of vacancies assigned</label>
        <summaryForeignKey>xcdhcm__Agency_Vacancy__c.xcdhcm__Agency__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__PSL_agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSL agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Primary_contact__c</fullName>
        <inlineHelpText>The main point of contact within the Recruitment Agency</inlineHelpText>
        <label>Primary contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Relationship_contact_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the internal Recruiter who acts as the primary point of contact with the Recruitment Agency.</inlineHelpText>
        <label>Relationship contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Salesforce_user_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency user account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recruitment_Agencies_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__State_Province__c</fullName>
        <label>Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Zip_Postal_code__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Recruitment Agency</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Agencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>